--- a/tailwindcss/user-dashboard.html
+++ b/tailwindcss/user-dashboard.html
@@ -111,7 +111,98 @@
             </div>
         </div>
 
-        
+        <!-- table -->
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+            <!-- today's tasks -->
+            <div class="bg-white rounded-xl p-6">
+                <h1 class="text-2xl font-bold mb-4">Today's Tasks</h1>
+                <div class="flex items-center justify-between mb-2">
+                    <div class="flex items-center gap-2">
+                        <div class="w-2 h-2 rounded-full bg-green-500"></div>
+                        <span>Complete project proposal</span>
+                    </div>
+                    <div>
+                        <span class="text-gray-400 text-sm">High</span>
+                    </div>
+                </div>
+                <div class="flex items-center justify-between mb-2">
+                    <div class="flex items-center gap-2">
+                        <div class="w-2 h-2 rounded-full bg-yellow-500"></div>
+                        <span>Review team updates</span>
+                    </div>
+                    <div>
+                        <span class="text-gray-400 text-sm">Normal</span>
+                    </div>
+                </div>
+                <div class="flex items-center justify-between">
+                    <div class="flex items-center gap-2">
+                        <div class="w-2 h-2 rounded-full bg-blue-500"></div>
+                        <span>Prepare for client meeting</span>
+                    </div>
+                    <div>
+                        <span class="text-gray-400 text-sm">Low</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- all tasks -->
+            <div class="bg-white rounded-xl p-6">
+                <h1 class="text-2xl font-bold mb-4">All Tasks</h1>
+                <!-- table heading -->
+                <div class="text-gray-500 font-semibold text-sm grid grid-cols-4 mb-4">
+                    <div>TASK TITLE</div>
+                    <div>PRIORITY</div>
+                    <div>TEAM</div>
+                    <div>CREATED AT</div>
+                </div>
+
+                <!-- test low task -->
+                <div class="grid grid-cols-4 items-center mb-4">
+                    <div class="flex items-center gap-2">
+                        <div class="w-2 h-2 rounded-full bg-green-500"></div>
+                        <span>Test Low Task</span>
+                    </div>
+                    <div><span class="bg-blue-100 px-2 py-1 rounded-md text-blue-500 text-sm">Low</span></div>
+                    <div class="flex -space-x-2">
+                        <div class="w-8 h-8 rounded-full bg-blue-500 text-white text-sm flex items-center justify-center">CA</div>
+                        <div class="w-8 h-8 rounded-full bg-green-500 text-white text-sm flex items-center justify-center">JS</div>
+                        <div class="w-8 h-8 rounded-full bg-yellow-500 text-white text-sm flex items-center justify-center">B</div>
+                    </div>
+                    <div><span class="text-gray-400 text-sm">9 months ago</span></div>
+                </div>
+
+                <!-- test normal task -->
+                <div class="grid grid-cols-4 items-center mb-4">
+                    <div class="flex items-center gap-2">
+                        <div class="w-2 h-2 rounded-full bg-yellow-500"></div>
+                        <span>Test Normal Task</span>
+                    </div>
+                    <div><span class="bg-gray-100 px-2 py-1 rounded-md text-gray-500 text-sm">Normal</span></div>
+                    <div class="flex -space-x-2">
+                        <div class="w-8 h-8 rounded-full bg-red-500 text-white text-sm flex items-center justify-center">AJ</div>
+                        <div class="w-8 h-8 rounded-full bg-purple-500 text-white text-sm flex items-center justify-center">EV</div>
+                        <div class="w-8 h-8 rounded-full bg-yellow-500 text-white text-sm flex items-center justify-center">B</div>
+                    </div>
+                    <div><span class="text-gray-400 text-sm">9 months ago</span></div>
+                </div>
+
+                <!-- test high task -->
+                <div class="grid grid-cols-4 items-center">
+                    <div class="flex items-center gap-2">
+                        <div class="w-2 h-2 rounded-full bg-red-500"></div>
+                        <span>Test High Task</span>
+                    </div>
+                    <div><span class="bg-red-100 px-2 py-1 rounded-md text-red-500 text-sm">Normal</span></div>
+                    <div class="flex -space-x-2">
+                        <div class="w-8 h-8 rounded-full bg-blue-500 text-white text-sm flex items-center justify-center">CA</div>
+                        <div class="w-8 h-8 rounded-full bg-green-500 text-white text-sm flex items-center justify-center">JS</div>
+                        <div class="w-8 h-8 rounded-full bg-red-500 text-white text-sm flex items-center justify-center">AJ</div>
+                        <div class="w-8 h-8 rounded-full bg-yellow-500 text-white text-sm flex items-center justify-center">B</div>
+                    </div>
+                    <div><span class="text-gray-400 text-sm">10 months ago</span></div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
