--- a/tailwindcss/user-dashboard.html
+++ b/tailwindcss/user-dashboard.html
@@ -114,7 +114,7 @@
         <!-- table -->
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
             <!-- today's tasks -->
-            <div class="bg-white rounded-xl p-6">
+            <div class="bg-white rounded-xl p-6 shadow-sm">
                 <h1 class="text-2xl font-bold mb-4">Today's Tasks</h1>
                 <div class="flex items-center justify-between mb-2">
                     <div class="flex items-center gap-2">
@@ -146,7 +146,7 @@
             </div>
 
             <!-- all tasks -->
-            <div class="bg-white rounded-xl p-6">
+            <div class="bg-white rounded-xl p-6 shadow-sm">
                 <h1 class="text-2xl font-bold mb-4">All Tasks</h1>
                 <!-- table heading -->
                 <div class="text-gray-500 font-semibold text-sm grid grid-cols-4 mb-4">
@@ -164,9 +164,9 @@
                     </div>
                     <div><span class="bg-blue-100 px-2 py-1 rounded-md text-blue-500 text-sm">Low</span></div>
                     <div class="flex -space-x-2">
-                        <div class="w-8 h-8 rounded-full bg-blue-500 text-white text-sm flex items-center justify-center">CA</div>
-                        <div class="w-8 h-8 rounded-full bg-green-500 text-white text-sm flex items-center justify-center">JS</div>
-                        <div class="w-8 h-8 rounded-full bg-yellow-500 text-white text-sm flex items-center justify-center">B</div>
+                        <div class="w-6 h-6 rounded-full bg-blue-500 text-white text-sm flex items-center justify-center">CA</div>
+                        <div class="w-6 h-6 rounded-full bg-green-500 text-white text-sm flex items-center justify-center">JS</div>
+                        <div class="w-6 h-6 rounded-full bg-yellow-500 text-white text-sm flex items-center justify-center">B</div>
                     </div>
                     <div><span class="text-gray-400 text-sm">9 months ago</span></div>
                 </div>
@@ -179,9 +179,9 @@
                     </div>
                     <div><span class="bg-gray-100 px-2 py-1 rounded-md text-gray-500 text-sm">Normal</span></div>
                     <div class="flex -space-x-2">
-                        <div class="w-8 h-8 rounded-full bg-red-500 text-white text-sm flex items-center justify-center">AJ</div>
-                        <div class="w-8 h-8 rounded-full bg-purple-500 text-white text-sm flex items-center justify-center">EV</div>
-                        <div class="w-8 h-8 rounded-full bg-yellow-500 text-white text-sm flex items-center justify-center">B</div>
+                        <div class="w-6 h-6 rounded-full bg-red-500 text-white text-sm flex items-center justify-center">AJ</div>
+                        <div class="w-6 h-6 rounded-full bg-purple-500 text-white text-sm flex items-center justify-center">EV</div>
+                        <div class="w-6 h-6 rounded-full bg-yellow-500 text-white text-sm flex items-center justify-center">B</div>
                     </div>
                     <div><span class="text-gray-400 text-sm">9 months ago</span></div>
                 </div>
@@ -194,10 +194,10 @@
                     </div>
                     <div><span class="bg-red-100 px-2 py-1 rounded-md text-red-500 text-sm">Normal</span></div>
                     <div class="flex -space-x-2">
-                        <div class="w-8 h-8 rounded-full bg-blue-500 text-white text-sm flex items-center justify-center">CA</div>
-                        <div class="w-8 h-8 rounded-full bg-green-500 text-white text-sm flex items-center justify-center">JS</div>
-                        <div class="w-8 h-8 rounded-full bg-red-500 text-white text-sm flex items-center justify-center">AJ</div>
-                        <div class="w-8 h-8 rounded-full bg-yellow-500 text-white text-sm flex items-center justify-center">B</div>
+                        <div class="w-6 h-6 rounded-full bg-blue-500 text-white text-sm flex items-center justify-center">CA</div>
+                        <div class="w-6 h-6 rounded-full bg-green-500 text-white text-sm flex items-center justify-center">JS</div>
+                        <div class="w-6 h-6 rounded-full bg-red-500 text-white text-sm flex items-center justify-center">AJ</div>
+                        <div class="w-6 h-6 rounded-full bg-yellow-500 text-white text-sm flex items-center justify-center">B</div>
                     </div>
                     <div><span class="text-gray-400 text-sm">10 months ago</span></div>
                 </div>
